--- a/personalInfo.html
+++ b/personalInfo.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title> Ethan Hunter </title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+    #contentBlockLeft{font-size: 20px;}
+  </style>
 </head>
 
 <body>
@@ -18,11 +21,12 @@
     Ethan Hunter
   </div>
   <div id="content">
-    <div id="contentBlockLeft">
-      Content Goes Here
-    </div>
-    <div id="contentBlockRight">
-      More content!!
+    <div id="contentBlock">
+      <div id="contentBlockLeft">
+        My name is Ethan Hunter and I am a computer Science major at the Univeristy of Northern Iowa,
+        interested in Software Engineering.
+        I currently am working at an internship through Jack Henry and Associates as a part of Banno.
+      </div>
     </div>
   </div>
   <div id="footer">
