--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,16 @@
     Ethan Hunter
   </div>
   <div id="content">
-    <div id="contentBlockLeft">
-      Content Goes Here
-    </div>
-    <div id="contentBlockRight">
-      More content!!
+    <div id="contentBlock">
+      Email: ethanphunter@gmail.com
+      <a href="https://www.linkedin.com/pub/ethan-hunter/5b/9b6/934" style="text-decoration:none;">
+        <span style="font: 80% Arial,sans-serif;">
+          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Ethan Hunter's LinkedIn profile" style="vertical-align:middle;" border="0">
+          &nbsp;View Ethan Hunter's profile
+        </span>
+      </a>
+      <a href="https://twitter.com/ethanphunter" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @ethanphunter</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
   </div>
   <div id="footer">
