added a cool link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div id="content">
     <div id="contentBlockLeft">
-      Content Goes Here
+      <a href="http://procatinator.com/">A great website.</a>
     </div>
     <div id="contentBlockRight">
       More content!!
