Updated Personal information

--- a/personalInfo.html
+++ b/personalInfo.html
@@ -25,7 +25,8 @@
       <div id="contentBlockLeft">
         My name is Ethan Hunter and I am a computer Science major at the Univeristy of Northern Iowa,
         interested in Software Engineering.
-        I currently am working at an internship through Jack Henry and Associates as a part of Banno.
+        I currently am working at an internship through Jack Henry and Associates as a part of Banno,
+        and as a teaching assistant in a robotics course in the Physics Department at the University of Northern Iowa.
       </div>
     </div>
   </div>
