Fixed the PosLogo link

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-md-6">
                         <div>
-                            <a href="https://github.com/ethanphunter/PointOfSaleProject"><img src="./img/posLogo.png"  class="img-circle img-thumbnail"></a>
+                            <a href="https://github.com/ethanphunter/PointOfSaleProject"><img src="./img/PosLogo.png"  class="img-circle img-thumbnail"></a>
                             <h2>Point of Sale System</h2>
                             <p>
                                 A Point of Sale web app written in Python for a group Project in the Software Engineering class at UNI
