--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>Ethan Hunter - Home</title>
 
+    <link rel="icon" type="picture/png" href="./img/Favicon.png">
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
