Cleaned up javascript and changed some text color

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I am a Student studying Computer Science at the University of Northern Iowa, 
+                <p>I am a Student studying Computer Science at the University of Northern Iowa,
                     working as an intern at Banno, and a teaching assistant in the physics department
                     for the projects in basic robotics and sensors course.</p>
             </div>
@@ -103,21 +103,21 @@
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                <h2>My Projects</h2>
+                <h2 class="myprojectsheader">My Projects</h2>
                 <div class="row stylish-panel">
                     <div class="col-md-6">
                         <div>
                             <a href="https://github.com/ethanphunter/Python-CommandLine"><img src="./img/pyCommand.png"  class="img-circle img-thumbnail"></a>
-                            <h2>Python Command Line</h2>
+                            <h2 class="projectheader">Python Command Line</h2>
                             <p>
-                                A small command line with easily customizable commands written in Python 
+                                A small command line with easily customizable commands written in Python
                             </p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div>
                             <a href="https://github.com/ethanphunter/PointOfSaleProject"><img src="./img/PosLogo.png"  class="img-circle img-thumbnail"></a>
-                            <h2>Point of Sale System</h2>
+                            <h2 class="projectheader">Point of Sale System</h2>
                             <p>
                                 A Point of Sale web app written in Python for a group Project in the Software Engineering class at UNI
                             </p>
