Updated the 'about me' section

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
                 <p>I am a Student studying Computer Science at the University of Northern Iowa,
-                    working as an intern at Banno, and a teaching assistant in the physics department
-                    for the projects in basic robotics and sensors course.</p>
+                    working as an intern at Banno at Jack Henry and Associates, 
+                    and a teaching assistant in the Physics Department at UNI 
+                    for the projects in basic robotics and sensors course.
+                </p>
             </div>
         </div>
     </section>
