--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>I am a Student studying Computer Science at the University of Northern Iowa,
                     working as an intern at Banno at Jack Henry and Associates, 
                     and a teaching assistant in the Physics Department at UNI 
-                    for the projects in basic robotics and sensors course.
+                    for the projects in basic robotics course.
                 </p>
             </div>
         </div>
