Added my Flask Experiment to the projects

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
                 <p>I am a Student studying Computer Science at the University of Northern Iowa,
-                    working as an intern at Banno at Jack Henry and Associates, 
-                    and a teaching assistant in the Physics Department at UNI 
+                    working as an intern at Banno at Jack Henry and Associates,
+                    and a teaching assistant in the Physics Department at UNI
                     for the projects in basic robotics course.
                 </p>
             </div>
@@ -109,10 +109,10 @@
                 <div class="row stylish-panel">
                     <div class="col-md-6">
                         <div>
-                            <a href="https://github.com/ethanphunter/Python-CommandLine"><img src="./img/pyCommand.png"  class="img-circle img-thumbnail"></a>
-                            <h2 class="projectheader">Python Command Line</h2>
+                            <a href="https://github.com/ethanphunter/FlaskExperiment"><img src="./img/FlaskExperimentLogo.png"  class="img-circle img-thumbnail"></a>
+                            <h2 class="projectheader">Flask Experiment</h2>
                             <p>
-                                A small command line with easily customizable commands written in Python
+                                A turn based game system running in a web app written in python using Flask.
                             </p>
                         </div>
                     </div>
