--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">My Projects</a>
+                        <a class="page-scroll" href="#projects">My Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -101,9 +101,9 @@
         </div>
     </section>
 
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
+    <!-- Projects Section -->
+    <section id="projects" class="content-section text-center">
+        <div class="projects-section">
             <div class="container">
                 <h2 class="myprojectsheader">My Projects</h2>
                 <div class="row stylish-panel">
