--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="./Blog.html">Blog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -156,7 +159,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Ethan Hunter 2016</p>
+            <p>Copyright &copy; Ethan Hunter 2017</p>
         </div>
     </footer>
 
