--- a/mini-sumo-robotics.html
+++ b/mini-sumo-robotics.html
@@ -90,9 +90,9 @@
                 <!-- Post Content -->
                 <p class="lead">Mini Sumo Robotics Resources</p>
                 <p><a href="https://narobotics.org">The North American Robotics Association</a>, this is a website that has been used to host information about UNI's Mini Sumo Robotics program. There are some good <a href="https://narobotics.org/technical-resources-minisumo-robotics">technical resources</a> linked to there. </p>
-                <p> Here is a link to the <a href="https://sites.google.com/site/unirobotsumo/chassis-build-1/chassis-build-part-2">Chassis Build Instructions</a></p>
+                <p> Here is a link to the <a href="https://sites.google.com/site/unirobotsumo/chassis-build-1/chassis-build-part-2">Chassis Build Instructions</a>.</p>
                 <p>My <a href="https://github.com/ethanphunter/Mini-Sumo">Mini-Sumo Github Repository</a>, this is a repository where I keep the base code that I use for Mini Sumo robotics.</p>
-                <p>The <a href="https://www.adafruit.com/product/170">ARDX kit</a> by <a href="https://www.adafruit.com">Adafruit</a> is a really good place to start learning how to build circuits with Arduino. Here are links to the <a href="http://ardx.org/src/guide/2/ARDX-EG-ADAF-WEB.pdf">Expirimenting Guide</a> and the <a href="http://ardx.org/src/circ/CIRC00-sheet-ADAF.pdf">breadboard sheet</a></p>
+                <p>The <a href="https://www.adafruit.com/product/170">ARDX kit</a> by <a href="https://www.adafruit.com">Adafruit</a> is a really good place to start learning how to build circuits with Arduino. Here are links to the <a href="http://ardx.org/src/guide/2/ARDX-EG-ADAF-WEB.pdf">Expirimenting Guide</a> and the <a href="http://ardx.org/src/circ/CIRC00-sheet-ADAF.pdf">breadboard sheet</a>.</p>
 
             </div>
 
