--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I am a Student studying Computer Science at the University of Northern Iowa,
-                    working as an intern at Banno at Jack Henry and Associates,
-                    and a teaching assistant in the Physics Department at UNI
-                    for the projects in basic robotics course.
+                <p>I am a student studying Computer Science at the University of Northern Iowa, working as an Software Developer Apprentice in the Banno group at Jack Henry and Associates, and a teaching assistant in the Physics Department at the University of Northern Iowa. I have also been the camp director for the Ultimate Sumo Robotics STEM Summer camp at UNI.
                 </p>
             </div>
         </div>
