Working on paging blog posts

--- a/BlogPage2.html
+++ b/BlogPage2.html
@@ -71,25 +71,13 @@
                 </h1>
 
                 <!-- First Blog Post -->
-                <h2>
-                    <a href="./mini-sumo-robotics.html">Mini Sumo Robotics</a>
-                </h2>
-                <p class="lead">
-                    by <a href="https://ethanphunter.github.io">Ethan Hunter</a>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on July 9, 2017 at 5:00 PM</p>
-                <hr>
-                <img class="img-responsive" src="./img/Goo.jpg" alt="">
-                <hr>
-                <p>This post is a collection of resources I use while making Mini Sumo Robots</p>
-                <a class="btn btn-primary" href="./mini-sumo-robotics.html">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
 
                 <!-- Pager -->
                 <ul class="pager">
-                    <li class="previous">
-                        <a href="./BlogPage2.html">&larr; Older</a>
+                    <li class="next">
+                        <a href="./Blog.html">Newer &rarr;</a>
                     </li>
                 </ul>
 
