--- a/mini-sumo-robotics.html
+++ b/mini-sumo-robotics.html
@@ -90,7 +90,7 @@
 
                 <!-- Post Content -->
                 <p class="lead">Mini Sumo Robotics Resources</p>
-                <p>This is a collection of resources that I used for the Summer 2017 Ultimate Sumo Robotics STEM camp. The majority of these resources I recieved from Dale Olson who led the Projects in Basic Robotics class while I was the Teaching Assistant.</p>
+                <p>This is a collection of resources that I used for the Summer 2017 Ultimate Sumo Robotics STEM camp. The majority of these resources I received from Dale Olson who led the Projects in Basic Robotics class while I was the Teaching Assistant.</p>
                 <p><a href="https://narobotics.org">The North American Robotics Association</a>, this is a website that has been used to host information about UNI's Mini Sumo Robotics program. There are some good <a href="https://narobotics.org/technical-resources-minisumo-robotics">technical resources</a> links there.</p>
                 <p> Here is a link to the <a href="https://sites.google.com/site/unirobotsumo/chassis-build-1/chassis-build-part-2">Chassis Build Instructions</a>.</p>
                 <p><a href="https://github.com/ethanphunter/Mini-Sumo">Mini-Sumo Github Repository</a>, this is a repository where I keep the base code that I use for Mini Sumo robotics.</p>
