--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <li>
                         <a class="page-scroll" href="./Blog.html">Blog</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="./Resume.pdf">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
